# Bernucchio

./: Bernucchio.pro  CMakeLists.txt  bits_functions.h  board.cpp  board.h  constants.h  ctg.cpp  ctg.h  evaluator.cpp  evaluator.h  gamestate.cpp  gamestate.h  hashlist.cpp  hashlist.h  logger.cpp  logger.h  magics.cpp  magics.hpp  main.cpp  move.h  moveinfo.h  movelist.cpp  movelist.h  moves.cpp  moves.h  optimization.cpp  optimization.h  pst.h  readme.rd  search.cpp  search.h  timemanager.cpp  timemanager.h  uci.cpp  uci.h  ucicommand.cpp  ucicommand.h  ucioption.cpp  ucioption.h  version.h.in
test/: CMakeLists.txt  fen.cpp  hash.cpp  main.cpp  perft.cpp
tests/: fen.cpp  hash.cpp  perft.cpp
